Fixed multiple alignment issues in different screen sizes.

--- a/src/Home.css
+++ b/src/Home.css
@@ -5,3 +5,16 @@
     hsl(180, 11%, 93%) 580px
   );
 }
+
+@media only screen and (max-width: 768px) {
+  .home {
+    background: linear-gradient(
+      180deg,
+      transparent 366px,
+      hsl(180, 11%, 93%) 366px
+    );
+  }
+}
+
+@media only screen and (max-width: 390px) {
+}
