--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -66,9 +66,6 @@ h2 {
 
 @media only screen and (max-width: 390px) {
   h1 {
-    /* margin-bottom: 0;
-    margin-top: 0; */
-    /* margin: 0; */
     margin-left: 30px;
     margin-right: 30px;
     font-weight: 700;
@@ -83,11 +80,16 @@ h2 {
   }
 
   #hero-image {
-    width: 350px;
+    width: 150px;
+    position: absolute;
+    right: 217px;
+    top: 210px;
+    z-index: -1;
   }
 
   .hero-image-container {
     text-align: center;
+    margin-top: 50px;
   }
 
   .get-started-button {
